--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,53 @@
+version: '3.8'
+
 services:
+
   jenkins:
-    image: jenkins/jenkins:lts
-    container_name: jenkins
-    ports:
-      - "8080:8080"
-      - "50000:50000"
+    image: jenkins/jenkins:lts-jdk11
     volumes:
-      - jenkins_home:/var/jenkins_home
-      - /var/run/docker.sock:/var/run/docker.sock
+       - jenkins_home:/var/jenkins_home
+    networks:
+      - sonarnet
+    ports:
+      - '8080:8080'
+      - '50000:50000'
 
   sonarqube:
-    image: sonarqube:latest
-    container_name: sonarqube
-    ports:
-      - "9000:9000"
-      - "9092:9092"
+    image: sonarqube:9.5-community
     volumes:
+      - sonarqube_conf:/opt/sonarqube/conf
       - sonarqube_data:/opt/sonarqube/data
       - sonarqube_extensions:/opt/sonarqube/extensions
-      - sonarqube_logs:/opt/sonarqube/logs
+      - sonarqube_bundled-plugins:/opt/sonarqube/lib/bundled-plugins
+    networks:
+      - sonarnet
+    ports:
+      - '9000:9000'
+    environment:
+      - sonar.jdbc.username=sonar
+      - sonar.jdbc.password=sonar
+      - sonar.jdbc.url=jdbc:postgresql://db:5432/sonar
+
+  db:
+    image: postgres
+    networks:
+      - sonarnet
+    environment:
+      - POSTGRES_USER=sonar
+      - POSTGRES_PASSWORD=sonar
+    volumes:
+      - postgresql:/var/lib/postgresql
+      - postgresql_data:/var/lib/postgresql/data
+
+networks:
+  sonarnet:
+    driver: bridge
 
 volumes:
-  jenkins_home:
+  sonarqube_conf:
   sonarqube_data:
   sonarqube_extensions:
-  sonarqube_logs:
+  sonarqube_bundled-plugins:
+  postgresql:
+  postgresql_data:
+  jenkins_home:
