--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,6 @@
-version: '3.8'
-
 services:
-
   jenkins:
-    image: jenkins/jenkins:lts-jdk11
+    image: jenkins/jenkins:lts
     volumes:
        - jenkins_home:/var/jenkins_home
     networks:
