--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     ports:
       - '8080:8080'
       - '50000:50000'
+    depends_on:
+      - sonarqube
 
   sonarqube:
     image: sonarqube:9.5-community
