--- a/server/pom.xml
+++ b/server/pom.xml
@@ -37,6 +37,7 @@
 	</scm> -->
 	<properties>
 		<java.version>17</java.version>
+		<sonar.host.url>http://sonarqube:9000</sonar.host.url>
 	</properties>
 	<repositories>
 		<repository>
