--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,11 @@
 services:
   jenkins:
-    image: jenkins/jenkins:lts-jdk11-docker
+    image: jenkins/jenkins:lts
     volumes:
        - jenkins_home:/var/jenkins_home
+       - /var/run/docker.sock:/var/run/docker.sock
+       - /usr/bin/docker:/usr/bin/docker
+    user: root
     networks:
       - sonarnet
     ports:
